--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@kyvg/vue3-notification": "^2.9.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "apexcharts": "^3.48.0",
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.4.2",
     "install": "^0.13.0",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
-    "npm": "^9.7.2",
     "postcss": "^8.4.24",
     "sass": "^1.63.6",
     "scss": "^0.2.4",
